--- a/readme
+++ b/readme
@@ -10,3 +10,4 @@ Suivre les étapes suivante afin de lancer l'application
 4 - Taper la commande 'ng serve' à la racine du projet puis se rendre à l'adresse http://localhost:4200/  
  
 
+08/04/2020 -> last update
